--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div>
 
 
-        <form id="bookingForm" action="/api/send-mail.js" method="POST"
+        <form id="bookingForm" action="/api/send-mail" method="POST"
           class="bg-white p-6 rounded-lg shadow-lg space-y-4">
 
 
